# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: actions_with_db.py  app.py  correct_url.py
page_analyzer/templates/: base.html  index.html  test.html  url.html  urls.html
