[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page analyzer"
authors = ["aleksei <jiunov@gmail.com>"]
license = "Free"
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
load-dotenv = "^0.1.0"
psycopg2-binary = "^2.9.9"
validators = "^0.28.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
